# mcp-ollama-studio

./: .env.template  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/src/: main.py
backend/src/core/: dependencies.py  exceptions.py  settings.py
backend/src/core/mcp_servers/: 01-deepwiki.json  02-fetch.json  03-time.json
backend/src/lib/: __init__.py  message_utils.py
backend/src/models/: __init__.py  chat.py  mcp.py
backend/src/prompts/: system_prompt.md
backend/src/routes/: chat.py  health.py  mcp.py
backend/src/services/: agent_service.py  chat_service.py  mcp_registry_service.py
backend/src/tools/: __init__.py  llm_client_factory.py  prompt_loader.py
backend/tests/: test_agent_service.py  test_chat_service.py  test_mcp_registry_service.py  test_message_utils.py
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/features/: ChatStudio.tsx  MCPOverview.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx  MainContent.tsx
frontend/src/components/ui/: AssistantMessage.tsx  MarkdownContent.tsx  StatusPill.tsx  ThemeToggle.tsx
frontend/src/hooks/: useApplyTheme.ts  useChatSession.ts  useMcpServers.ts
frontend/src/lib/: assistant-content.test.ts  assistant-content.ts  sse.test.ts  sse.ts
frontend/src/services/: api-client.ts  chat.service.ts  mcp.service.ts
frontend/src/stores/: navigation.store.ts  theme.store.ts
frontend/src/types/: chat.ts  mcp.ts
ollama/: Dockerfile  entrypoint.sh
(+3 files in other folders)
